--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ script:
   - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("DistributedFactorGraphs"); Pkg.test("DistributedFactorGraphs"; coverage=true)'
 after_success:
     - julia -e 'cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
+    - julia -e 'Pkg.add("Documenter")'
+    - julia -e 'cd(Pkg.dir("DistributedFactorGraphs.jl")); include(joinpath("docs", "make.jl"))'
