--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ uuid = "b5cc3c7e-6572-11e9-2517-99fb8daf2f04"
 version = "0.0.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
