--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
-julia = "1.0, 1.1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
