--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,11 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
+Distributions = "≥ 0.18"
+DocStringExtensions = "≥ 0.7"
+Graphs = "≥ 0.10.3"
+Reexport = "≥ 0.2"
+Requires = "≥ 0.5"
 julia = "1"
 
 [extras]
