--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ DocStringExtensions = "≥ 0.7"
 Graphs = "≥ 0.10.3"
 Reexport = "≥ 0.2"
 Requires = "≥ 0.5"
-julia = "1"
+julia = "0.7, 1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
