--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,8 @@ julia = "0.7, 1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+IncrementalInference = "904591bb-b899-562f-9e6f-b8df64c7d480"
+RoME = "91fb55c2-4c03-5a59-ba21-f4ea956187b8"
 
 [targets]
 test = ["Test"]
