Allow failures on julia 1.2 for now until upstream is fixed

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ notifications:
 matrix:
   allow_failures:
     - julia: nightly
+    - julia: 1.2
 
 # script:
 #   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
