--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ notifications:
 matrix:
   allow_failures:
     - julia: nightly
-    - julia: 1.2
 
 # script:
 #   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
@@ -34,7 +33,7 @@ matrix:
 #     - julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.add(PackageSpec(name="MetaGraphs", rev="master")); Pkg.build(); Pkg.test(coverage=true)'
 
 after_success:
-    - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
+    - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
 
 jobs:
   include:
