--- a/Project.toml
+++ b/Project.toml
@@ -31,4 +31,4 @@ RoME = "91fb55c2-4c03-5a59-ba21-f4ea956187b8"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "RoME"]
