--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ uuid = "b5cc3c7e-6572-11e9-2517-99fb8daf2f04"
 version = "0.4.0"
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
