--- a/Project.toml
+++ b/Project.toml
@@ -20,13 +20,14 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 [compat]
 Distributions = "≥ 0.18"
 DocStringExtensions = "≥ 0.7"
-Graphs = "≥ 0.10.3"
+Graphs = "≥ 0.10.2"
 MetaGraphs = "≥ 0.6.4"
 Reexport = "≥ 0.2"
 Requires = "≥ 0.5"
 julia = "0.7, 1"
 
 [extras]
+GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
