--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: julia
 sudo: required
+dist: trusty
 
 os:
     - linux
@@ -18,30 +19,9 @@ matrix:
   allow_failures:
     - julia: nightly
 
-before_install:
-  - wget dist.neo4j.org/neo4j-community-3.3.5-unix.tar.gz
-  - tar -xzf neo4j-community-3.3.5-unix.tar.gz
-  - sed -i 's/#dbms.security.auth_enabled=false/dbms.security.auth_enabled=false/g' neo4j-community-3.3.5/conf/neo4j.conf
-  - sed -i 's/dbms.security.auth_enabled=true/dbms.security.auth_enabled=false/g' neo4j-community-3.3.5/conf/neo4j.conf
-  - export JAVA_HOME=/home/jdk/jdk1.7.0_45
-  - export PATH=$JAVA_HOME/bin:$PATH
-  - neo4j-community-3.3.5/bin/neo4j start
-
 before_script:
-  - curl http://neo4j:neo4j@localhost:7474/db/data/labels
-
-# script:
-#   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#   - julia --project --check-bounds=yes -e 'using UUIDs; write("Project.toml", replace(read("Project.toml", String), r"uuid = .*?\n" =>"uuid = \"$(uuid4())\"\n"));
-# import Pkg; Pkg.build("DistributedFactorGraphs"); Pkg.test("DistributedFactorGraphs"; coverage=true)'
-
-# script:
-#   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#   - julia --check-bounds=yes -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("DistributedFactorGraphs"); Pkg.test("DistributedFactorGraphs"; coverage=true)'
-
-# can be used if master of package is required
-# script:
-#     - julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.add(PackageSpec(name="MetaGraphs", rev="master")); Pkg.build(); Pkg.test(coverage=true)'
+    - sleep 10
+    - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
 
 after_success:
     - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
