--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,14 @@ julia:
 notifications:
     email: false
 
+jobs:
+  include:
+      - julia: 1.2
+        script:
+            - julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.add("IncrementalInference"); Pkg.build(); Pkg.test(coverage=true)'
+        after_success:
+            - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
+
 matrix:
   allow_failures:
     - julia: nightly
@@ -44,11 +52,3 @@ jobs:
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
-
-    - stage: "IIF Driver Tests"
-      julia: 1.2
-      os: linux
-      script:
-        - julia -e 'import Pkg; Pkg.add("IncrementalInference"); Pkg.test("DistributedFactorGraphs")'
-      after_success:
-        - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
