--- a/.travis.yml
+++ b/.travis.yml
@@ -11,28 +11,31 @@ os:
 services:
     - neo4j
 
-julia:
-    - 1.0
-    - 1.1
-    - 1.2
-    - 1.3
-    - nightly
-
 notifications:
     email: false
 
 jobs:
   include:
-      - julia: 1.2
-        script:
-            - julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.add("IncrementalInference"); Pkg.build(); Pkg.test(coverage=true)'
-        after_success:
-            - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
+    - julia: 1.0
+      env: IIF_TEST=false
+    - julia: 1.1
+      env: IIF_TEST=false
+    - julia: 1.2
+      env: IIF_TEST=false
+    - julia: 1.2
+      env: IIF_TEST=true
+    - julia: 1.3
+      env: IIF_TEST=false
+    - julia: nightly
+      env: IIF_TEST=false
 
 matrix:
   allow_failures:
     - julia: nightly
-
+      env: IIF_TEST=false
+    - julia: 1.2
+      env: IIF_TEST=true
+      
 # Set the password for Neo4j to neo4j:test
 before_script:
     - sleep 10
