--- a/.travis.yml
+++ b/.travis.yml
@@ -11,30 +11,24 @@ os:
 services:
     - neo4j
 
+julia:
+    - 1.0
+    - 1.1
+    - 1.2
+    - 1.3
+    - nightly
+
+env:
+    - IIF_TEST=false
+    - IIF_TEST=true
+
 notifications:
     email: false
-
-jobs:
-  include:
-  - julia: 1.0
-    env: IIF_TEST=false
-  - julia: 1.1
-    env: IIF_TEST=false
-  - julia: 1.2
-    env: IIF_TEST=false
-  - julia: 1.2
-    env: IIF_TEST=true
-  - julia: 1.3
-    env: IIF_TEST=false
-  - julia: nightly
-    env: IIF_TEST=false
 
 matrix:
   allow_failures:
   - julia: nightly
-    env: IIF_TEST=false
-  - julia: 1.2
-    env: IIF_TEST=true
+  - env: IIF_TEST=true
 
 # Set the password for Neo4j to neo4j:test
 before_script:
