--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,30 @@ julia:
     - 1.3
     - nightly
 
+env:
+    - IIF_TEST=false
+
+jobs:
+  include:
+    - julia: 1.2
+      env: IIF_TEST=true
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia -e 'import Pkg; Pkg.add("Documenter"); Pkg.add("Neo4j"); Pkg.add("GraphPlot")'
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
+
 notifications:
     email: false
 
 matrix:
   allow_failures:
-    - julia: nightly
+  - julia: nightly
+  - env: IIF_TEST=true
 
 # Set the password for Neo4j to neo4j:test
 before_script:
@@ -32,22 +50,3 @@ before_script:
 
 after_success:
     - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
-
-jobs:
-  include:
-    - stage: "Documentation"
-      julia: 1.0
-      os: linux
-      script:
-        - julia -e 'import Pkg; Pkg.add("Documenter"); Pkg.add("DataFrames")'
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
-        - julia --project=docs/ docs/make.jl
-      after_success: skip
-
-    - stage: "IIF Driver Tests"
-      julia: 1.2
-      os: linux
-      script:
-        - julia -e 'import Pkg; Pkg.add("IncrementalInference"); Pkg.test("DistributedFactorGraphs")'
-      after_success: skip
