--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ JSON2 = "2535ab7d-5cd8-5a07-80ac-9b1792aadce3"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
+Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -22,6 +23,7 @@ Distributions = "≥ 0.18"
 DocStringExtensions = "≥ 0.7"
 Graphs = "≥ 0.10.3"
 MetaGraphs = "≥ 0.6.4"
+Neo4j = "≥ 2.0.0"
 Reexport = "≥ 0.2"
 Requires = "≥ 0.5"
 julia = "0.7, 1"
@@ -29,8 +31,7 @@ julia = "0.7, 1"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
-Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [targets]
-test = ["Test", "GraphPlot", "Neo4j", "Pkg"]
+test = ["Test", "GraphPlot", "Pkg"]
