--- a/Project.toml
+++ b/Project.toml
@@ -19,13 +19,13 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-Distributions = "≥ 0.18"
-DocStringExtensions = "≥ 0.7"
-Graphs = "≥ 0.10.3"
-MetaGraphs = "≥ 0.6.4"
-Neo4j = "≥ 2.0.0"
-Reexport = "≥ 0.2"
-Requires = "≥ 0.5"
+Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
+DocStringExtensions = "0.7, 0.8, 0.9, 0.10, 1"
+Graphs = "0.10.2, 0.11, 1"
+MetaGraphs = "^0.6.3"
+Neo4j = "2"
+Reexport = "0.2, 0.3, 0.4, 0.5, 1"
+Requires = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 1"
 julia = "0.7, 1"
 
 [extras]
