--- a/Project.toml
+++ b/Project.toml
@@ -19,13 +19,13 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-Colors = "0.9.6"
+Colors = "0.8, 0.9, 0.10, 0.11"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
 DocStringExtensions = "0.7, 0.8, 0.9, 0.10, 1"
-GraphPlot = "0.3.1, 0.4.0"
+GraphPlot = "0.3.1, 0.4"
 Graphs = "0.10.2, 0.11, 1"
 JSON2 = "0.3.1"
-LightGraphs = "1.2.0, 1.3.0"
+LightGraphs = "1.2, 1.3"
 MetaGraphs = "^0.6.3"
 Neo4j = "2"
 Reexport = "0.2, 0.3, 0.4, 0.5, 1"
