Starting PPE node creation

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,11 @@ matrix:
 # - env: IIF_TEST=true
 
 # Set the password for Neo4j to neo4j:test
+# Run the database initialization script
 before_script:
     - sleep 10
     - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
+    - curl -i -v -H "Content-Type: application/json; charset=UTF-8" -X POST http://neo4j:test@localhost:7474/db/data/transaction/commit --data-binary "@database/init.cql"
 
 after_success:
     - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
