--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 [compat]
 Colors = "0.8, 0.9, 0.10, 0.11"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
-DocStringExtensions = "0.7, 0.8, 0.9, 0.10, 1"
+DocStringExtensions = "0.8, 0.9, 0.10, 1"
 GraphPlot = "0.3.1, 0.4"
 Graphs = "0.10.2, 0.11, 1"
 JSON2 = "0.3.1"
