--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,17 @@ dist: trusty
 
 os:
     - linux
+    - osx
+
+arch:
+    - amd64
+    - arm64
 
 services:
     - neo4j
 
 julia:
     - 1.0
-    - 1.1
     - 1.2
     - 1.3
     - nightly
@@ -38,6 +42,8 @@ notifications:
 matrix:
   allow_failures:
   - julia: nightly
+  - arch: arm64
+  - os: osx
 # - env: IIF_TEST=true
 
 # Set the password for Neo4j to neo4j:test
