--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ before_script:
     - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
 
 after_success:
-    - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()))'
+    - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
