--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ services:
     - neo4j
 
 julia:
-    - 1.0
-#FIXME#    - 1.2
+#FIXME#    - 1.0
+    - 1.2
 #FIXME#    - 1.3
 #FIXME#    - nightly
 
 env:
-    - IIF_TEST=false
+    - IIF_TEST=true
 
 #FIXME#jobs:
 #FIXME#  include:
