--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Neo4j = "2"
 Reexport = "0.2, 0.3, 0.4, 0.5, 1"
 Requires = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 1"
 Unmarshal = "0.3"
-julia = "0.7, 1"
+julia = "1.2"
 
 [extras]
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
