--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -1,7 +1,11 @@
 name: TagBot
+
 on:
   schedule:
-    - cron: 0 * * * *
+    - cron: '20 00 * * *'
+  issues:
+    types: [closed, reopened]
+      
 jobs:
   TagBot:
     runs-on: ubuntu-latest
