--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '20 00 * * *'
   issues:
-    types: [closed, reopened]
+    types: [closed,]
       
 jobs:
   TagBot:
