--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: julia
 sudo: required
-dist: trusty
+# dist: trusty
 
 os:
     - linux
@@ -22,9 +22,14 @@ env:
 jobs:
   include:
     - julia: 1.3
+      dist: trusty
       env: IIF_TEST=true
       if: NOT branch =~ ^release.*$
-    # - arch: arm64
+      # Set the password for Neo4j to neo4j:test
+      before_script:
+        - sleep 10
+        - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
+    - arch: arm64
     - stage: "Documentation"
       julia: 1.3
       os: linux
@@ -35,17 +40,27 @@ jobs:
   fast_finish: true
   allow_failures:
       - julia: nightly
-      # - arch: arm64
+      - arch: arm64
       #- env: IIF_TEST=true
 
 notifications:
     email: false
 
 
-# Set the password for Neo4j to neo4j:test
-before_script:
-    - sleep 10
-    - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
+# Attempt to install neo4j on Xenial and set the password for Neo4j to neo4j:test
+# Cloud tests errors with authentication error
+#before_script:
+#   - sudo add-apt-repository -y ppa:openjdk-r/ppa
+#   - sudo apt-get update
+#   - wget -O - https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -
+#   - echo 'deb https://debian.neo4j.com stable latest' | sudo tee -a /etc/apt/sources.list.d/neo4j.list
+#   - sudo apt-get update
+#   - apt list -a neo4j
+#   - sudo apt-get install neo4j=1:4.0.0
+#   - sudo service neo4j start
+#   - sleep 10
+#   - sudo neo4j-admin set-initial-password test
+#   - curl -I http://localhost:7474/
 
 after_success:
     - julia -e 'using Pkg; cd(Pkg.dir("DistributedFactorGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
