--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - sudo add-apt-repository -y ppa:openjdk-r/ppa
         - sudo apt-get update
         - wget -O - https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -
-        - echo 'deb https://debian.neo4j.com stable latest' | sudo tee -a /etc/apt/sources.list.d/neo4j.list
+        - echo 'deb https://debian.neo4j.com stable 3.5' | sudo tee /etc/apt/sources.list.d/neo4j.list
         - sudo apt-get update
         - apt list -a neo4j
         - sudo apt-get install neo4j=1:3.5
