--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,6 +3,7 @@ Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
+IncrementalInference = "904591bb-b899-562f-9e6f-b8df64c7d480"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 
 [compat]
