--- a/Project.toml
+++ b/Project.toml
@@ -17,8 +17,9 @@ Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 Unmarshal = "cbff2730-442d-58d7-89d1-8e530c41eb02"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 Colors = "0.8, 0.9, 0.10, 0.11, 0.12"
@@ -31,6 +32,7 @@ LightGraphs = "1.2, 1.3"
 Neo4j = "2"
 Reexport = "0.2, 0.3, 0.4, 0.5, 1"
 Requires = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 1"
+TimeZones = "1.2.0"
 Unmarshal = "0.3, 0.4"
 julia = "1.2"
 
