--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ JSON2 = "2535ab7d-5cd8-5a07-80ac-9b1792aadce3"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
@@ -31,6 +32,7 @@ JSON = "0.21"
 JSON2 = "0.3.1"
 LightGraphs = "1.2, 1.3"
 Neo4j = "2"
+Pkg = "1.4, 1.5"
 Reexport = "0.2, 0.3, 0.4, 0.5, 1"
 Requires = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 1"
 TimeZones = "1.3.1"
