--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
     - julia: 1.4
       env:
         - IIF_TEST=true
-      if: NOT branch =~ /^(v\d+\.\d+(\.\d+)?([-+]\S*)?)|(release.*)$/
+      if: NOT branch =~ /(^v\d+\.\d+(\.\d+)?([-+]\S*)?$)|(^release.*$)/
     - arch: arm64
       env: SKIP_CGDFG_TESTS=true
       before_script:
