--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Unmarshal = "cbff2730-442d-58d7-89d1-8e530c41eb02"
 Colors = "0.8, 0.9, 0.10, 0.11, 0.12"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
 DocStringExtensions = "0.8, 0.9, 0.10, 1"
+GraphPlot = "0.4"
 Graphs = "0.10.2, 0.11, 1"
 JSON = "0.21"
 JSON2 = "0.3.1"
