--- a/Project.toml
+++ b/Project.toml
@@ -43,9 +43,10 @@ julia = "1.4"
 
 [extras]
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "GraphPlot", "Manifolds", "Pkg"]
+test = ["Test", "GraphPlot", "LinearAlgebra", "Manifolds", "Pkg"]
