--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ ManifoldsBase = "0.11"
 Neo4j = "2"
 Pkg = "1.4, 1.5"
 Reexport = "0.2, 0.3, 0.4, 0.5, 1"
-Requires = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 1"
+Requires = "0.5, 1"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
 Unmarshal = "0.4"
