--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,12 +73,12 @@ jobs:
 
   test-cfg:
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/release**'
-    name: CGDFG, Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    name: CGDFG ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     env:
       JULIA_PKG_SERVER: ""
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         version:
           - '1.6'
@@ -87,64 +87,64 @@ jobs:
         arch:
           - x64
     steps:
-          - name: Checkout
-            uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-          - name: Setup Julia
-            uses: julia-actions/setup-julia@v1
-            with:
-              version: ${{ matrix.version }}
-              arch: ${{ matrix.arch }}
+      - name: Setup Julia
+        uses: julia-actions/setup-julia@v1
+        with:
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
 
-          - name: Install neo4j
-            run: |
-              sudo add-apt-repository -y ppa:openjdk-r/ppa
-              sudo apt-get update
-              wget -O - https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -
-              echo 'deb https://debian.neo4j.com stable 3.5' | sudo tee /etc/apt/sources.list.d/neo4j.list
-              sudo apt-get update
-              apt list -a neo4j
-              sudo apt-get install neo4j
-              sudo service neo4j start
-              sleep 10
-              curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
-              # sudo neo4j-admin set-initial-password test
-              curl -I http://localhost:7474/
+      - name: Install neo4j
+        run: |
+          sudo add-apt-repository -y ppa:openjdk-r/ppa
+          sudo apt-get update
+          wget -O - https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -
+          echo 'deb https://debian.neo4j.com stable 3.5' | sudo tee /etc/apt/sources.list.d/neo4j.list
+          sudo apt-get update
+          apt list -a neo4j
+          sudo apt-get install neo4j
+          sudo service neo4j start
+          sleep 10
+          curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=test"
+          # sudo neo4j-admin set-initial-password test
+          curl -I http://localhost:7474/
 
-          - name: Cache Artifacts
-            uses: actions/cache@v1
-            env:
-              cache-name: cache-artifacts
-            with:
-              path: ~/.julia/artifacts
-              key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-              restore-keys: |
-                ${{ runner.os }}-test-${{ env.cache-name }}-
-                ${{ runner.os }}-test-
-                ${{ runner.os }}-
+      - name: Cache Artifacts
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
 
-          - name: Julia Build Pkg
-            uses: julia-actions/julia-buildpkg@latest
-          
-          - name: Git Test Credentials
-            run: |
-              git config --global user.name Tester
-              git config --global user.email te@st.er
-          
-          - name: Run tests
-            env:
-              IIF_TEST: true
-              DO_CGDFG_TESTS: true
-              DFG_USE_CGDFG: true
-            uses: julia-actions/julia-runtest@latest
-          
-          - name: Process Coverage
-            uses: julia-actions/julia-processcoverage@v1
-            
-          - name: Code Coverage
-            uses: codecov/codecov-action@v1
-            with:
-              file: lcov.info
+      - name: Julia Build Pkg
+        uses: julia-actions/julia-buildpkg@latest
+      
+      - name: Git Test Credentials
+        run: |
+          git config --global user.name Tester
+          git config --global user.email te@st.er
+      
+      - name: Run tests
+        env:
+          IIF_TEST: true
+          DO_CGDFG_TESTS: true
+          DFG_USE_CGDFG: true
+        uses: julia-actions/julia-runtest@latest
+      
+      - name: Process Coverage
+        uses: julia-actions/julia-processcoverage@v1
+        
+      - name: Code Coverage
+        uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
 
   docs:
     needs: test
