--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,20 +72,11 @@ jobs:
           file: lcov.info
 
   test-cfg:
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/release**'
-    name: CGDFG ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
-    runs-on: ${{ matrix.os }}
+    # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/release**'
+    name: CGDFG 1.6 - ubuntu-latest - x64
+    runs-on: ubuntu-latest
     env:
       JULIA_PKG_SERVER: ""
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - '1.6'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -93,8 +84,8 @@ jobs:
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
         with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
+          version: 1.6
+          arch: x64
 
       - name: Install neo4j
         run: |
