--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,19 @@ jobs:
 
   test-cfg:
     # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/release**'
-    name: CGDFG 1.6 - ubuntu-latest - x64
-    runs-on: ubuntu-latest
+    name: w/ LGPL ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
     env:
       JULIA_PKG_SERVER: ""
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - '1.6'
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -84,8 +93,8 @@ jobs:
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
         with:
-          version: 1.6
-          arch: x64
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
 
       - name: Install neo4j
         run: |
@@ -124,7 +133,7 @@ jobs:
       
       - name: Run tests
         env:
-          IIF_TEST: true
+          IIF_TEST: false
           DO_CGDFG_TESTS: true
           DFG_USE_CGDFG: true
         uses: julia-actions/julia-runtest@latest
