--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ Colors = "0.8, 0.9, 0.10, 0.11, 0.12"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
 DocStringExtensions = "0.8, 0.9, 0.10, 1"
 Graphs = "1.4"
+GraphPlot = "0.5.0"
 JSON = "0.21"
 JSON2 = "0.3.1"
 LightGraphs = "1.2, 1.3"
