User OrderedDict to store variable and factors

--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ManifoldsBase = "3362f125-f0bb-47a3-aa74-596ffd7ef2fb"
 Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
@@ -29,8 +30,8 @@ Unmarshal = "cbff2730-442d-58d7-89d1-8e530c41eb02"
 Colors = "0.10, 0.11, 0.12"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8, 0.9"
-Graphs = "1.4"
 GraphPlot = "0.5.0"
+Graphs = "1.4"
 JSON = "0.21"
 JSON2 = "0.3.1"
 LightGraphs = "1.2, 1.3"
