--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ ManifoldsBase = "0.11, 0.12, 0.13"
 Neo4j = "2"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
+RecursiveArrayTools = "2"
 Reexport = "1"
 Requires = "1"
 TensorCast = "0.3.3, 0.4"
