Restore IIF tests and some fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       
       - name: Run tests
         env:
-          IIF_TEST: false
+          IIF_TEST: true
           DO_CGDFG_TESTS: false
           DFG_USE_CGDFG: false
         uses: julia-actions/julia-runtest@latest
