CompatHelper: add new compat entry for SHA at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -52,6 +52,7 @@ Pkg = "1.4, 1.5"
 ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
+SHA = "0.7"
 StaticArrays = "1"
 StructTypes = "1"
 Tar = "1.9"
