Add a Ordered Dict Row Table Blob Store

--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 TensorCast = "02d47bb6-7ce6-556a-be16-bb1710789e2b"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
@@ -52,8 +53,8 @@ Graphs = "1.4"
 InteractiveUtils = "1.10"
 JSON3 = "1"
 LinearAlgebra = "1.10"
-ManifoldsBase = "0.14, 0.15"
 Manifolds = "0.9"
+ManifoldsBase = "0.14, 0.15"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
 ProgressMeter = "1"
@@ -64,9 +65,10 @@ SparseArrays = "1.10"
 StaticArrays = "1"
 Statistics = "1.10"
 StructTypes = "1"
+Tables = "v1.11.1"
 Tar = "1.9"
-Test = "1.10"
 TensorCast = "0.3.3, 0.4"
+Test = "1.10"
 TimeZones = "1.3.1"
 UUIDs = "1.10"
 julia = "1.10"
