CompatHelper: bump compat for GraphPlot in [weakdeps] to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ Dates = "1.10"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8, 0.9"
 FileIO = "1"
-GraphPlot = "0.5.0"
+GraphPlot = "0.5.0, 0.6"
 Graphs = "1.4"
 InteractiveUtils = "1.10"
 JSON3 = "1"
