update manifolds test compat

--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ Graphs = "1.4"
 InteractiveUtils = "1.10"
 JSON3 = "1"
 LinearAlgebra = "1.10"
-Manifolds = "0.9"
+Manifolds = "0.9, 0.10"
 ManifoldsBase = "0.14, 0.15"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
